Tue Sep  1 16:16:41 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * MPC/config/catiorlib.mpb:
        * utils/catior/Catior_i.h:
        * utils/catior/Catior_i.cpp:
        * utils/catior/Makefile.am:
        * utils/catior/catior.cpp:
        * utils/catior/catior.mpc:
        * utils/catior/catior_export.h:

          Split the IOR decoding functionality out into a separate library.

        * MPC/modules/IDLHelper.pm:

          Removed an unused variable.

Mon Aug 31 09:43:14 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/Connection_Handler.h:
        * tao/Connection_Handler.cpp:
        * tao/ORB_Core.h:

          Removed not used members.

        * tao/Transport.cpp:

          Changed direct comparisons examining the queue state to
          TAO_Transport::queue_is_empty_i().

Tue Aug 25 21:03:23 UTC 2009  Steve Huston  <shuston@riverace.com>

        * tests/Bug_3567_Regression/run_test.pl: Interpret ior file path
          correctly when client and server are different places.

Fri Aug 14 13:30:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/tutorials/Quoter/AMI/client.cpp
        * docs/tutorials/Quoter/On_Demand_Activation/client.cpp
        * docs/tutorials/Quoter/Simple/Client/client.cpp
        * docs/tutorials/Quoter/Simple/Impl-Repo/client.cpp
        * docs/tutorials/Quoter/Simple/Persistent/client.cpp
        * examples/Buffered_AMI/client.cpp
        * examples/Buffered_Oneways/client.cpp
        * performance-tests/Protocols/distributor.cpp
        * performance-tests/Protocols/sender.cpp
          Removed not needed unicode conversions

        * orbsvcs/orbsvcs/IFRService/ArrayDef_i.cpp:
          Added missing ACE_TEXT

Fri Aug 14 12:43:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/tao_vc8warnings.mpb:
          Use DisableSpecificWarnings

Thu Aug 13 16:57:22 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/directive.cpp: