@@ -34,6 +34,16 @@ if ($server->WaitForFileTimed ($iorbase,
     $SV->Kill (); $SV->TimedWait (1);
     exit 1;
 }
+if ($server->GetFile ($iorbase) == -1) {
+    print STDERR "ERROR: cannot get file <$server_iorfile>\n";
+    $SV->Kill (); $SV->TimedWait (1);
+    exit 1;
+}
+if ($client->PutFile ($iorbase) == -1) {
+    print STDERR "ERROR: cannot set file <$client_iorfile>\n";
+    $SV->Kill (); $SV->TimedWait (1);
+    exit 1;
+}
 
 $client_status = $CL->SpawnWaitKill (120);
 $server_status = $SV->TerminateWaitKill (5);
